[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonhelper-toolkit"
version = "0.1.0"
description = "A Python package to analyze Python scripts automatically"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your@email.com"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rajazain2001/pythonhelper"
